--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
       // GitHub Pages SPA redirect fallback
       const redirectTo = '/' + location.pathname + location.search + location.hash;
       sessionStorage.setItem('redirect', redirectTo);
-      window.location.href = '/profile-cv/bio';
+      window.location.href = '/';
     </script>
   </head>
   <body>
